# fixedbitset

./: .gitignore  .travis.yml  Cargo.toml  README.md  README.rst
.github/workflows/: ci.yaml  rust.yml
benches/: Cargo.toml  benches.rs
benches/benches/: benches.rs
src/: asbits.rs  lib.rs  range.rs  serde_impl.rs
src/block/: avx.rs  avx2.rs  default.rs  mod.rs  neon.rs  sse2.rs  wasm.rs  wasm32.rs
tests/: lib.rs  tests.rs
