[package]
name = "benches"
version = "0.1.0"
edition = "2021"
description = "Benchmarks for FixedBitset"
publish = false
license = "MIT OR Apache-2.0"

[dev-dependencies]
fixedbitset = { path = ".." }
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false